# please

./: Cargo.toml  LICENSE  README.md  test.sh
src/: config.rs  history_parser.rs  main.rs  script.rs
test-data/: .zsh_history  ignored_history
